project/stage/testing/lexical/parse_tests/tests/reject/bad_statements/bad_assignments/aggregate_types/before_var_decl.ul
void main() {
    id[0001] = 1;
    int id;
}
